[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/ChevalDeFrise.gd" type="Script" id=1]
[ext_resource path="res://Textures/Cheval de Frise.png" type="Texture" id=2]
[ext_resource path="res://Scenes/defense boundary.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/robotSensor.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0.051125, -30 )
b = Vector2( 0, 30 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Cheval de Frise" type="Node2D" groups=[
"resettable",
]]

script/script = ExtResource( 1 )
delay_time = 0.2
slope_strength = 1000.0

[node name="low sprite" type="Sprite" parent="."]

transform/pos = Vector2( -31.7642, -31.94 )
transform/scale = Vector2( 0.496806, 0.496806 )
z/z = 1
z/relative = false
texture = ExtResource( 2 )
centered = false

[node name="defense boundary" parent="." instance=ExtResource( 3 )]

[node name="collision" type="StaticBody2D" parent="." groups=[
"robot sensor",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.87703, 0, 0, 3.07939, 0.0480479, -0.148404 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]

transform/pos = Vector2( 0.0480479, -0.148404 )
transform/scale = Vector2( 1.87703, 3.07939 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="left sensor" type="StaticBody2D" parent="." groups=[
"robot sensor",
]]

transform/pos = Vector2( -30, 0 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="left sensor"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="right sensor" type="StaticBody2D" parent="." groups=[
"robot sensor",
]]

transform/pos = Vector2( 30, 0 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="right sensor"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1.88124, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
space_override = 1
gravity_vec = Vector2( 1, 0 )
gravity = 50.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/scale = Vector2( 1.88124, 3 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="robot_entered" from="collision" to="." method="_on_collision_robot_entered"]

[connection signal="robot_entered" from="left sensor" to="." method="_on_left_sensor_robot_entered"]

[connection signal="robot_entered" from="right sensor" to="." method="_on_right_sensor_robot_entered"]


